--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="/Images/1649093541748 (1)-modified (1) (1) (1).png"></td>
+            <td> <img src="Images/1649093541748 (1)-modified (1) (1) (1).png"></td>
             <td> <h1>Abhishek's Personal Site</h1>
                 <p1><em>Head of Content at <a href="https://btbdigital.com/" target="_blank">BTB Digital</a>.</em></p1></td>
         </tr>
